--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,4 +35,5 @@ stages:
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
-        tags: 'latest'
+        tags: |
+          $(tag)
